Fixes text wrap

--- a/webapp/src/css/inbox.less
+++ b/webapp/src/css/inbox.less
@@ -676,7 +676,7 @@ body {
 .item-content {
   padding: 30px;
   .body p {
-    word-wrap: break-word;
+    word-break: break-word;
     margin: 0;
   }
   > div {
